--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ FGM and HIV-AIDS.</li>
         <!-- EmailJS contact form -->
         <form id="contact-form">
             <input name="from_name" type="text" placeholder="Your Name" required>
-            <input name="reply_to" type="email" placeholder="Your Email" required>
+            <input name="from_email" type="email" placeholder="Your Email" required>
             <textarea name="message" placeholder="Your Message" required></textarea>
             <button type="submit">Send Message</button>
             <div id="form-status" aria-live="polite"></div>
