--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <p>
             Ereto Namunyak is a local organization with a membership of 10 drawn from a wide range of professions. Ereto Namunyak was formed in 2024 and registered in 2025 as a Non-Governmental Organization under the laws of Kenya. The vision of Ereto Namunyak then was to have a rising, prosperous Maa community where everyone has a share and a role to play. The mission then was to fighting hunger Drought illiteracy and bad governance etc.
 The formation of the organization was precipitated by the realization among professionals that there were deficiencies regarding socio-economic development in the community, particularly in education, infrastructure, human resource development, and land/Pastoral Resource base protection. Consequently, the core problems that were the focus of the organization’s efforts from the onset were low education standards, o spearhead the rights of persons with special needs., Primary Health Care, and educating society to acknowledge the Right their responsibility at large .
-Ereto-Namunyak's operations cover the whole of Kajiado County, which has wards: Magadi, Oldonyo nyokie, and eight traditional sections.
+Ereto-Namunyak's operations cover the whole of Magadi, Oldonyo nyokie, and eight traditional sections.
         </p>
     </section>
 
@@ -75,15 +75,37 @@ FGM and HIV-AIDS.</li>
     <section id="projects" class="fade-in">
         <h2>Our Projects</h2>
         <div class="cards">
-            <div class="card">Women Empowerment Program</div>
-            <div class="card">Persons With Special Needs Empowerment Program</div>
-            <div class="card">Church Empowerment Group</div>
+            <div class="card"><p>
+                Women Empowerment Program
+            </p>
+            <img src="images/OIP.webp" alt="moran">
+        </div>
+            <div class="card">
+                <p>Persons With Special Needs Empowerment Program</p>
+                <img src="images/OIP.webp" alt="Persons With Special Needs">
+            </div>
+            <div class="card">
+                <p>Church Empowerment Group</p>
+                <img src="images/OIP.webp" alt="Church Empowerment">
+            </div>
+            <div class="card">
+                <p>Environtmental Conservation and Climate Change Initiatives</p>
+                <img src="images/OIP.webp" alt="Environmental Conservation">
+            </div>
+            <div class="card">
+                <p>Persons With Special Needs Empowerment</p>
+                <img src="images/OIP.webp" alt="Empowerment">
+            </div>
+            <div class="card">
+                <p>Gender Equality</p>
+                <img src="images/OIP.webp" alt="Gender Equality">
+            </div>
         </div>
     </section>
 
     <section id="contact" class="fade-in">
         <h2>Contact Us</h2>
-        <!-- EmailJS contact form -->
+        <!-- Contact form (posts to backend) -->
         <form id="contact-form">
             <input name="from_name" type="text" placeholder="Your Name" required>
             <input name="from_email" type="email" placeholder="Your Email" required>
@@ -121,7 +143,7 @@ FGM and HIV-AIDS.</li>
     </footer>
 
     <!-- EmailJS SDK (client-side) -->
-    <script type="text/javascript" src="https://cdn.emailjs.com/sdk/3.2.0/email.min.js"></script>    
+    <script type="text/javascript" src="https://cdn.emailjs.com/sdk/3.2.0/email.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
