--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@ FGM and HIV-AIDS.</li>
             <div class="card"><p>
                 Women Empowerment Program
             </p>
-            <img src="images/OIP.webp" alt="moran">
+            <img src="images/women .jpeg" alt="moran">
         </div>
             <div class="card">
                 <p>Persons With Special Needs Empowerment Program</p>
-                <img src="images/OIP.webp" alt="Persons With Special Needs">
+                <img src="images/PWSN.jpeg" alt="Persons With Special Needs">
             </div>
             <div class="card">
                 <p>Church Empowerment Group</p>
@@ -90,15 +90,17 @@ FGM and HIV-AIDS.</li>
             </div>
             <div class="card">
                 <p>Environtmental Conservation and Climate Change Initiatives</p>
-                <img src="images/OIP.webp" alt="Environmental Conservation">
+                <img src="images/environment 1.jpeg" alt="Environmental Conservation">
+                <img src="images/environment 2.jpeg" alt="">
             </div>
             <div class="card">
-                <p>Persons With Special Needs Empowerment</p>
-                <img src="images/OIP.webp" alt="Empowerment">
+                <p>Education and Youth Empowerment</p>
+                <img src="images/education 1.jpeg" alt="Empowerment">
+                <img src="images/education 2.jpeg" alt="">
             </div>
             <div class="card">
                 <p>Gender Equality</p>
-                <img src="images/OIP.webp" alt="Gender Equality">
+                <img src="images/education.jpeg" alt="Gender Equality">
             </div>
         </div>
     </section>
