--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@ FGM and HIV-AIDS.</li>
                 Women Empowerment Program
             </p>
             <img src="images/women .jpeg" alt="moran">
+            <img src="images/environmment.jpeg" alt="">
         </div>
             <div class="card">
                 <p>Persons With Special Needs Empowerment Program</p>
@@ -145,7 +146,7 @@ FGM and HIV-AIDS.</li>
     </footer>
 
     <!-- EmailJS SDK (client-side) -->
-    <script type="text/javascript" src="https://cdn.emailjs.com/sdk/3.2.0/email.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
