--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <p>
             Ereto Namunyak is a local organization with a membership of 10 drawn from a wide range of professions. Ereto Namunyak was formed in 2024 and registered in 2025 as a Non-Governmental Organization under the laws of Kenya. The vision of Ereto Namunyak then was to have a rising, prosperous Maa community where everyone has a share and a role to play. The mission then was to fighting hunger Drought illiteracy and bad governance etc.
 The formation of the organization was precipitated by the realization among professionals that there were deficiencies regarding socio-economic development in the community, particularly in education, infrastructure, human resource development, and land/Pastoral Resource base protection. Consequently, the core problems that were the focus of the organization’s efforts from the onset were low education standards, o spearhead the rights of persons with special needs., Primary Health Care, and educating society to acknowledge the Right their responsibility at large .
-Ereto-Namunyak's operations cover the whole of Magadi, Oldonyo nyokie, and eight traditional sections.
+Ereto-Namunyak's operations cover the whole of Magadi(Shompole and Olkeri community land), Oldonyo nyokie and Olkiramatian group ranches.
         </p>
     </section>
 
@@ -144,13 +144,14 @@ FGM and HIV-AIDS.</li>
         </div>
         <p>&copy; 2026 Ereto Namunyak Organization | All Rights Reserved</p>
         <div class="footer-contact">
+            <h2>Contact Us:</h2>
             <p>
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z"/></svg>
                 eretonamunyak@gmail.com
             </p>
             <p>
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/></svg>
-                 +254719584657
+                 +254719584657/ +254725343620
             </p>
             <p>
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/></svg>
