--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <section id="about" class="fade-in">
         <h2>About Us</h2>
         <p>
-            Ereto Namunyak is a local organization with a membership of 10 drawn from a wide range of professions. Ereto Namunyak was formed in 2024 and registered in 2025 as a Non-Governmental Organization under the laws of Kenya. The vision of Ereto Namunyak then was to have a rising, prosperous Maa community where everyone has a share and a role to play. The mission then was to fighting hunger Drought illiteracy and bad governance etc.
+            Ereto Namunyak is a local organization with a membership of 10 drawn from a wide range of professions. Ereto Namunyak was formed in 2024 and registered in 2025 as a community based Organization under the laws of Kenya. The vision of Ereto Namunyak then was to have a rising, prosperous Maa community where everyone has a share and a role to play. The mission then was to fighting hunger Drought illiteracy and bad governance etc.
 The formation of the organization was precipitated by the realization among professionals that there were deficiencies regarding socio-economic development in the community, particularly in education, infrastructure, human resource development, and land/Pastoral Resource base protection. Consequently, the core problems that were the focus of the organization’s efforts from the onset were low education standards, o spearhead the rights of persons with special needs., Primary Health Care, and educating society to acknowledge the Right their responsibility at large .
 Ereto-Namunyak's operations cover the whole of Magadi(Shompole and Olkeri community land), Oldonyo nyokie and Olkiramatian group ranches.
         </p>
@@ -96,7 +96,7 @@ FGM and HIV-AIDS.</li>
             </div>
             <div class="card">
                 <p>Education and Youth Empowerment</p>
-                <img src="images/education 1.jpeg" alt="Empowerment">
+                <img src="images/youth empowement.jpeg" alt="Empowerment">
                 <img src="images/education 2.jpeg" alt="">
             </div>
             <div class="card">
