--- a/index.html
+++ b/index.html
@@ -60,6 +60,25 @@ Ereto-Namunyak's operations cover the whole of Magadi(Shompole and Olkeri commun
         </p>
     </section>
 
+    <!-- Impact Stats Section -->
+    <section id="impact" class="fade-in">
+        <h2>Our Impact</h2>
+        <div class="stats-grid">
+            <div class="stat-item">
+                <div class="stat-number" data-target="10">0</div>
+                <p>Professional Members</p>
+            </div>
+            <div class="stat-item">
+                <div class="stat-number" data-target="3">0</div>
+                <p>Communities Served</p>
+            </div>
+            <div class="stat-item">
+                <div class="stat-number" data-target="6">0</div>
+                <p>Key Programs</p>
+            </div>
+        </div>
+    </section>
+
     <section id="mission" class="fade-in">
         <h2>Our Mission</h2>
         <p>
