--- a/index.html
+++ b/index.html
@@ -108,12 +108,16 @@ FGM and HIV-AIDS.</li>
             </div>
             <div class="card">
                 <p>Church Empowerment Group</p>
-                <img src="images/OIP.webp" alt="Church Empowerment">
+                <img src="images/church 1.jpeg" alt="Church Empowerment">
+                <img src="images/church 2.jpeg" alt="church">
+                <img src="images/church 3.jpeg" alt="church">
             </div>
             <div class="card">
                 <p>Environtmental Conservation and Climate Change Initiatives</p>
                 <img src="images/environment 1.jpeg" alt="Environmental Conservation">
                 <img src="images/environment 2.jpeg" alt="">
+                <img src="images/environment 3.jpeg" alt="">
+                <img src="images/environment 4.jpeg" alt="">
             </div>
             <div class="card">
                 <p>Education and Youth Empowerment</p>
