--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ FGM and HIV-AIDS.</li>
                 <img src="images/PWSN.jpeg" alt="Persons With Special Needs">
             </div>
             <div class="card">
-                <p>Church Empowerment Group</p>
+                <p>Church Empowerment Program</p>
                 <img src="images/church 1.jpeg" alt="Church Empowerment">
                 <img src="images/church 2.jpeg" alt="church">
                 <img src="images/church 3.jpeg" alt="church">
