--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Header / Hero -->
     <header class="hero">
         <div class="hero-inner">
-            <h1>Ereto Namunyak</h1>
+            <h1><span>Ereto</span> Namunyak</h1>
             <p class="tagline">Serving the Community with <span id="typed">Diligence</span></p>
             <a class="cta" href="#projects">See Our Projects</a>
         </div>
